--- a/Mutation_Detection_CNN.ipynb
+++ b/Mutation_Detection_CNN.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Tempus Computer Vision Challenge**"
+    "# **Detection of Mutations from Tissue Slides using a CNN**"
    ]
   },
   {
